Add missing pieces to Taxonomy Component

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "rocket/taxonomy",
-    "description": "",
+    "description": "Taxonomy for your content",
+    "licence": "MIT",
     "authors": [
         {
             "name": "Stéphane Goetz",
