[Taxonomy] Refactoring + Hierarchy helpers (paths + ancestry)

--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
     ],
     "require": {
         "php": ">=5.4.0",
-		"illuminate/support": "4.1.*"
+		"illuminate/support": "4.1.*",
+        "centraldesktop/graph": "dev-master"
     },
     "autoload": {
         "classmap": [ "migrations" ],
