--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,9 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "illuminate/support": ">=5.0.0",
-        "centraldesktop/graph": "dev-master"
+        "php": ">=5.5.0",
+        "illuminate/support": "~5.2",
+        "centraldesktop/graph": "~1.0"
     },
     "autoload": {
         "classmap": [ "migrations" ],
